<resources>

    <string name="app_name">Jobi</string>

    <string name="create_story_button">Create Story</string>
    <string name="active_sprint_button">Active Sprint</string>

    <string name="backlog_label">Backlog</string>

    <string name="summary_label">Summary</string>
    <string name="summary_hint">User story</string>

    <string name="criteria_label">Acceptance Criteria</string>
    <string name="criteria_hint">Implementation details</string>

    <string name="points_label">Story Points</string>
    <string name="points_hint">Planning poker numbers</string>

    <string name="priority_label">Priority</string>
    <string name="radio_current">Current</string>
    <string name="radio_next">Next</string>
    <string name="radio_later">Later</string>

    <string name="todo_label">To Do</string>
    <string name="inprogress_label">In Progress</string>
    <string name="done_label">Done</string>

    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>


    <!--EnterPosition Activity/Fragment Strings-->
    <string name="position_title">Position</string>
    <string name="position_label">Position Title</string>
    <string name="position_hint">Enter Position Title</string>
    <string name="position_company_label">Company</string>
    <string name="position_company_hint">Enter Company</string>
    <string name="position_location_label">Location</string>
    <string name="position_location_hint">Enter Location</string>

    <string name="position_type_label">Position Type</string>
    <string-array name="position_type_array">
        <item>Full-time</item>
        <item>Part-time</item>
        <item>Internship</item>
        <item>Volunteer</item>
    </string-array>

    <string name="position_status">Status</string>
    <string name="position_status_todo">To Do</string>
    <string name="position_status_inProgress">In Progress</string>
    <string name="position_status_done">Done</string>

    <string name="position_contact_label">Contacts</string>
    <string name="position_description_label">Description</string>
    <string name="position_description_hint">Enter Description</string>


    <!--Position Activity/Fragment Strings-->
    <string name="position_type_text">Position type: </string>
    <string name="position_status_text">Status: </string>
    <string name="position_contacts_text">Contacts</string>
    <string name="position_next_steps_label">Next Steps</string>
    <string name="add_new_event_button">Add new event</string>


    <!-- EnterEvents Activity/Fragment String -->
    <string name="event_title">Event</string>
    <string name="event_name_label">Event Name</string>
    <string name="event_name_hint">Enter Event Name</string>
    <string name="event_location_label">Location</string>
    <string name="event_location_hint">Enter Location</string>
    <string name="event_date_label">Date: </string>
    <string name="event_date_button">Pick Date</string>
    <string name="event_time_label">Time: </string>
    <string name="event_time_button">Pick Time</string>

    <string name="event_type_label">Type: </string>
    <string-array name="event_type_array">
        <item>Interview</item>
        <item>Email</item>
        <item>Deadline</item>
    </string-array>


    <!-- Events Activity/Fragment Strings -->
    <string name="date_text">Date: </string>
    <string name="time_text">Time: </string>
    <string name="reminders_label">Reminders</string>
    <string name="set_reminder_button">Set Reminder</string>
    <string name="contacts_label">Contacts</string>
    <string name="add_contact_button">Add a Contact</string>
    <string name="edit_event_button">Edit Event</string>

    <string name="interviews">Interviews</string>


    <!-- Contact Activity/Fragment Strings -->
    <string name="contact_title">Contact</string>
    <string name="contact_name_label">Name</string>
    <string name="contact_name_hint">Enter Name</string>
    <string name="contact_email_label">Email</string>
    <string name="contact_email_hint">Enter Email</string>
    <string name="contact_jobtitle_label">Job Title</string>
    <string name="contact_jobtitle_hint">Enter Job Title</string>
    <string name="contact_phone_label">Phone</string>
    <string name="contact_phone_hint">Enter Phone Number</string>

    <!-- Reminder Activity/Fragment Strings -->
    <string name="reminder_title">Reminder</string>

    <string-array name="reminder_array">
        <item>10 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
    </string-array>

    <!-- List of Companies, Positions, and Events Strings -->
    <string name="list_all">All</string>

    <string name="company_list_label">Companies</string>
    <string name="current_companies">Current</string>

    <string name="position_list_label">Positions</string>
    <string name="events_list_label">Events</string>

    <string name="event_interview_label">Interview</string>
    <string name="event_email_label">Email</string>
    <string name="event_deadline_label">Deadline</string>


    <!--Home Activity Strings-->
    <string name="home_title">Welcome!</string>
    <string name="create_position_label">Create New Position</string>
    <string name="manage_label">Manage</string>
    <string name="status_label">Status</string>
    <string name="coming_up_label">Coming Up</string>
    <string name="favorite_positions_label">Favorite Positions</string>

    <!--Global Menu Buttons-->
    <string name="settings_button">Settings</string>
    <string name="home_button">Home</string>

    <!---Settings Activity/Fragment Strings-->
    <string name="settings_title">Settings</string>
    <string name="notifications_label">Notifications</string>
    <string name="notifications_onOff_label">ON/OFF</string>
    <string name="interviews_label">Upcoming Interviews</string>
    <string name="emails_label">Pending Emails</string>
    <string name="deadline_label">Deadlines</string>
    <string name="status_interviewing">Interviewing</string>
    <string name="status_searching">Searching</string>
    <string name="status_not_searching">Not Searching</string>

    <string name="positions_todo">To Do</string>
    <string name="positions_ongoing">Ongoing</string>
    <string name="positions_done">Done</string>

    <string name="event_list_label">Events</string>

    <string name="add_new_button">Add new</string>

    <!-- Company Activity/Fragment Strings -->
    <string name="company_title">Company</string>
    <string name="company_name">Company Name</string>
    <string name="company_location">Location</string>
    <string name="company_description">Description</string>

</resources>
