<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/edit_position_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:textSize="28sp"
            android:text="@string/position_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/position_label"/>

        <EditText
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/position_company_label"/>

        <EditText
            android:id="@+id/position_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_company_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/position_location_label"/>

        <EditText
            android:id="@+id/position_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_location_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/position_type_label"/>

        <Spinner
            android:id="@+id/position_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/position_status"/>

        <RadioGroup
            android:id="@+id/position_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/position_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_status_todo"/>
            <RadioButton
                android:id="@+id/position_inProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_status_inProgress"/>
            <RadioButton
                android:id="@+id/position_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_status_done"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/position_description_label"/>

        <EditText
            android:id="@+id/position_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_description_hint"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/position_contact_label"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/save_story_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_button"/>

            <Button
                android:id="@+id/cancel_story_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_button"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
