<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textSize="50dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/position_list_label"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/position_tab_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:tabIndicatorColor="@android:color/darker_gray">

        <android.support.design.widget.TabItem
            android:id="@+id/all_positions_tab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/list_all" />

        <android.support.design.widget.TabItem
            android:id="@+id/positions_todo_tab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/positions_todo" />

        <android.support.design.widget.TabItem
            android:id="@+id/positions_inprogress_tab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/positions_inprogress" />

        <android.support.design.widget.TabItem
            android:id="@+id/positions_done_tab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/positions_done" />

    </android.support.design.widget.TabLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#E6E6E6">

        <TextView
            android:id="@+id/position_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""/>
    </ScrollView>

</LinearLayout>
